[gd_scene load_steps=7 format=2]

[ext_resource path="res://Godot Ylesanne 06.gd" type="Script" id=1]
[ext_resource path="res://boomshakalaka.png" type="Texture" id=2]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://VT323-Regular.ttf"

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0.0352941, 0.00392157, 0.00392157, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 4
outline_color = Color( 0.0352941, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 59.0
margin_top = 10.0
margin_right = 978.0
margin_bottom = 547.0
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
modulate = Color( 0.862745, 0.117647, 0.117647, 1 )
self_modulate = Color( 0.862745, 0.117647, 0.117647, 1 )
margin_left = 13.0
margin_right = 784.0
margin_bottom = 319.0
custom_colors/default_color = Color( 0.854902, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_selected = Color( 0.862745, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "munamunamunamuna"

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect"]
margin_left = 608.0
margin_top = 8.0
margin_right = 909.0
margin_bottom = 142.0
custom_colors/font_color_selected = Color( 0.862745, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = SubResource( 2 )

[node name="RichTextLabel3" type="RichTextLabel" parent="TextureRect"]
margin_left = 323.0
margin_top = 144.0
margin_right = 624.0
margin_bottom = 278.0
custom_colors/font_color_selected = Color( 0.862745, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="RichTextLabel4" type="RichTextLabel" parent="TextureRect"]
margin_left = 598.0
margin_top = 383.0
margin_right = 899.0
margin_bottom = 517.0
custom_colors/font_color_selected = Color( 0.862745, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="RichTextLabel5" type="RichTextLabel" parent="TextureRect"]
margin_left = 12.0
margin_top = 392.0
margin_right = 313.0
margin_bottom = 526.0
custom_colors/font_color_selected = Color( 0.862745, 0.117647, 0.117647, 1 )
custom_fonts/normal_font = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}
